@@ -1,3 +1,7 @@
+2009-12-06  Laurent Calmes <lcalmes@users.sourceforge.net>
+
+	* library.c: Fixed Nikon Preview code for Nikon D300,
+
 2009-10-31  Marcus Meissner  <marcus@jet.franken.de>
 
 	* config.c: Implemented Sharpness, Capture Delay and Burst
